# beamsim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/release-notes/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md
.github/workflows/: ci.yml
configs/: bs_coordination.yaml  handover_no_reflectors.yaml  snr.yaml
configs/algo/: all.yaml
configs/experiment/: alpha.yaml  handover.yaml  rotational.yaml
configs/scenario/: case_a_umi_10mps.yaml  case_a_umi_1mps.yaml  case_c_freespace_rotation.yaml  case_d_4bs_handover.yaml  case_d_4bs_no_reflectors.yaml
configs/sweep/: alpha.yaml  none.yaml  rotational_rpm.yaml  snr_db.yaml
docs/: MATLAB_PARITY.md  ROADMAP.md  SOTA_BASELINES.md  api.md  architecture.md  development.md  index.md  installation.md  quickstart.md  related_work.md  usage.md
examples/: minimal_example.py
experiments/: exp_alpha_sweep.py  exp_bs_coordination.py  exp_handover.py  exp_hbm_omp_comparison.py  exp_mab_comparison.py  exp_regret_vs_snr.py  exp_rotational.py  exp_snr_followup.py  exp_snr_sweep.py  exp_sota_comparison.py
results/: alpha_log.txt  handover_log.txt  snr_log.txt
results/smoke/: alpha_1.npz  alpha_2.npz  alpha_aggregate.npz
src/beamsim/: __init__.py  bplm.py  channel.py  codebook.py  configs.py  geometry.py  link_budget.py  metrics.py  plotting.py  run.py  runner.py
src/beamsim/algorithms/: __init__.py  agemx.py  angular_prediction.py  bai.py  base.py  ci.py  ci_mbs.py  dl_lstm_predictor.py  dl_predictor.py  ekf_tracker.py  exhaustive.py  hbm.py  mamba.py  mcmd.py  nns.py  nns_bs_sequential.py  nns_tabu.py  omp_compressive.py  perfect.py  position_mab.py  random_search.py  tabu.py  thompson.py  ucb1.py
src/beamsim/algorithms/_dl/: lstm_predictor.py  mlp_predictor.py  train.py
tests/: test_algorithms.py  test_behaviour.py  test_bplm.py  test_channel.py  test_codebook.py  test_examples.py  test_geometry.py  test_link_budget.py  test_matlab_ports.py  test_metrics.py  test_packaging.py  test_planar_codebook.py  test_plotting.py  test_property.py  test_runner.py
