[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamsim"
version = "0.1.0"
description = "Geometry-based mmWave beam-alignment simulator for the MCMD evaluation"
requires-python = ">=3.10"
authors = [
    { name = "MCMD evaluation reproduction" }
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dl = [
    "torch>=2.2",
    "tqdm>=4.65",
]
dev = [
    "pytest>=7",
    "pytest-xdist",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "pytest-benchmark>=4",
    "pre-commit>=3.7",
]

[project.scripts]
beamsim-run = "beamsim.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "NPY"]
ignore = [
    "E501",   # line too long — docstrings and long algorithm signatures are acceptable
    "E741",   # ambiguous variable name — l/L are standard beam-index notation throughout
    "B905",   # zip() without strict= — Python 3.10+ default is fine for internal helpers
    "RUF007", # itertools.pairwise — Python 3.10 compatible but would change readability
    "RUF002", # ambiguous en-dash in docstring — range notation style choice
    "RUF003", # ambiguous en-dash in comment — docstring style choice
    "B027",   # empty method in ABC without abstract decorator — reset() is intentionally optional
    "SIM108", # ternary instead of if-else — keep explicit for readability
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
# Relaxed from strict=true: skipping no_any_generics, strict_equality,
# disallow_any_generics since numpy/scipy return unparameterised Any types
# in many legitimate places.
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "matplotlib.*", "tqdm.*", "yaml.*"]
ignore_missing_imports = true
