[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamsim"
version = "0.2.0"
description = "Geometry-based mmWave beam-alignment simulator reproducing the MCMD evaluation figures"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "jakupsv", email = "jakupsv@setur.fo" }
]
keywords = ["mmwave", "beam-alignment", "5G", "3GPP TR 38.901", "simulation", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dl = [
    "torch>=2.2",
    "tqdm>=4.65",
]
test = [
    "pytest>=7",
    "pytest-xdist",
    "pytest-benchmark>=4",
    "pytest-cov>=5",
    "hypothesis>=6.100",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "beamsim[test,docs]",
    "ruff>=0.15",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/Marimuda/beamsim"
Repository = "https://github.com/Marimuda/beamsim"
Issues = "https://github.com/Marimuda/beamsim/issues"
Changelog = "https://github.com/Marimuda/beamsim/blob/main/CHANGELOG.md"

[project.scripts]
beamsim-run = "beamsim.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beamsim = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = [
    "ignore::DeprecationWarning:hydra.*",
    "ignore::DeprecationWarning:omegaconf.*",
]

[tool.coverage.run]
branch = true
source = ["beamsim"]
omit = [
    "src/beamsim/algorithms/_dl/*",  # ML training code, run separately
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "NPY"]
ignore = [
    "E501",   # line too long — docstrings and long algorithm signatures are acceptable
    "E741",   # ambiguous variable name — l/L are standard beam-index notation throughout
    "B905",   # zip() without strict= — Python 3.10+ default is fine for internal helpers
    "RUF007", # itertools.pairwise — Python 3.10 compatible but would change readability
    "RUF002", # ambiguous en-dash in docstring — range notation style choice
    "RUF003", # ambiguous en-dash in comment — docstring style choice
    "B027",   # empty method in ABC without abstract decorator — reset() is intentionally optional
    "SIM108", # ternary instead of if-else — keep explicit for readability
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
# Relaxed from strict=true: skipping no_any_generics, strict_equality,
# disallow_any_generics since numpy/scipy return unparameterised Any types
# in many legitimate places.
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "matplotlib.*", "tqdm.*", "yaml.*"]
ignore_missing_imports = true
